gke/pingpong/pingpong.deployment.v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep

spec:
  replicas: 2
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pinpong
          image: akhonya/pingpong:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: backend-http
              containerPort: 3000
              protocol: TCP
      volumes:
        - name: db-init
          configMap:
            name: db-configmap
