gke/pingpong/pingpong.service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  pingpong-svc
spec:
  selector:
    app:  pingpong
  type:  NodePort
  ports:
  - name:  http
    port:  80
    targetPort:  3000
